--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.7.2
-Django==4.2.4
+cffi==1.15.1
+cryptography==41.0.3
+Django==3.2
 django-cors-headers==4.2.0
-django-environ==0.10.0
+django-extensions==3.2.3
 djangorestframework==3.14.0
-gunicorn==21.2.0
-packaging==23.1
+jwt==1.3.1
+protobuf==4.21.9
+pycparser==2.21
 pytz==2023.3
+pywatchman==1.4.1
 sqlparse==0.4.4
 whitenoise==6.5.0
