--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cryptography==41.0.3
 Django==4.2.4
 django-cors-headers==4.2.0
 django-extensions==3.2.3
+django-rest-framework==0.1.0
 djangorestframework==3.14.0
 jwt==1.3.1
 protobuf==4.21.9
