--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework==3.14.0
 jwt==1.3.1
 protobuf==4.21.9
 pycparser==2.21
+PyJWT==2.8.0
 pytz==2023.3
 pywatchman==1.4.1
 sqlparse==0.4.4
